refactor: switch to alpine base image and optimize jre size